[package]
name = "ramp64-convert-web"
description = "A bare-bones web to locally do SRM conversion"
repository = "https://github.com/drehren/ra_mp64_srm_convert"
license = "MIT"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["File"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
wasm-pack = "0.15"

[profile.release]
lto = true
opt-level = "s"
